# adanny

./: .bazelrc  .gitignore  BUILD  LICENSE  README.md  Vagrantfile  WORKSPACE  adanny.go  go.mod  go.sum
.circleci/: config.yml
app/: .babelrc  BUILD  BUILD.bazel  config.json  package.json  webpack.config.js
app/public/: _footer.html  _header.html  index.1.html  index.html  more.html  signup.html
app/public/script/: top.js
app/public/style/: anim.css
app/src/: App.jsx
app/static/: _base.html  schedule-add.html  schedule.html
app/static/script/: signup.js
app/static/style/: main.css
vagrant/: README.md  bazel.sh  bootstrap.sh  docker.sh  golang.sh  nginx.sh  npm.sh
www/: BUILD.bazel  Dockerfile  main.go
www/comment/: BUILD.bazel  route.go
www/index/: BUILD.bazel  route.go
www/news/: BUILD.bazel  route.go
