load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "adanny.net/www",
    visibility = ["//visibility:private"],
    deps = [
        "//www/comment:go_default_library",
        "//www/index:go_default_library",
        "//www/news:go_default_library",
        "@com_github_gin_gonic_gin//:go_default_library",
    ],
)

go_binary(
    name = "www",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "go_image",
    srcs = ["main.go"],
    importpath = "adanny.net/www",
    deps = [
        "//www/comment:go_default_library",
        "//www/index:go_default_library",
        "//www/news:go_default_library",
        "@com_github_gin_gonic_gin//:go_default_library",
    ],
    goarch = "amd64",
    goos = "linux",
    pure = "on",
)
