load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "controller.go",
        "model.go",
        "route.go",
    ],
    importpath = "adanny.net/www/comment",
    visibility = ["//visibility:public"],
    deps = ["@com_github_gin_gonic_gin//:go_default_library"],
)
